# ncp-mail-service-lecture

./: .gitignore  .pdm-python  pyproject.toml
src/: main.py  sql_app.db
src/app/: database.py
src/app/apis/: auth.py  post.py  user.py
src/app/core/: redis_config.py
src/app/core/middlewares/: cors.py  security.py
src/app/dependencies/: auth.py
src/app/models/: post.py  user.py
src/app/schemas/: auth.py  post.py  user.py
src/app/services/: auth_service.py  post_service.py  token_service.py  user_service.py
src/app/utils/: auth.py
